--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "mongo_project",
+  "name": "mongo_app",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^7.6.3"
   }
 }
